# particle-simulator

./: CMakeLists.txt  device_management.cpp  gui.cpp  gui.hpp  main.cpp  simulation.cu  simulation.hpp
include/: device_management.hpp  utils.h
src/: device_management.cpp  device_management.cu  gui.cpp  main.cpp  simulation.cu
