cmake_minimum_required(VERSION 3.16)
project(particle_simulator)
set(CMAKE_CUDA_STANDARD 14)
find_package(CUDA REQUIRED)
find_package(GLUT REQUIRED)
find_package(OpenGL REQUIRED)
include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )
cuda_add_executable(particle_simulator device_management.cpp device_management.hpp gui.cpp gui.hpp main.cpp simulation.cu simulation.hpp utils.h)
target_link_libraries(particle_simulator ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )
set_target_properties(particle_simulator PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
